# add class loader file