@@ -2,6 +2,8 @@ package gc;
 
 /**
  * FullGC调优实例
+ * BEFORE_JVM_SETTING:-Xms200M -Xmx200M -XX:NewSize=100m -XX:MaxNewSize=100m -XX:SurvivorRatio=8 -XX:PretenureSizeThreshold=20m -XX:+UseConcMarkSweepGC -Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps
+ * AFTER_JVM_SETTING: -Xms300M -Xmx300M -XX:NewSize=200m -XX:MaxNewSize=200m -XX:SurvivorRatio=2 -XX:PretenureSizeThreshold=20m -XX:+UseConcMarkSweepGC -Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps
  */
 public class FullGCOptmize {
 
