@@ -2,6 +2,7 @@ package gc;
 
 /**
  * 模拟OldGC测试
+ * JVM_SETTINGS:-Xms10M -Xmx10M -XX:NewSize=5m -XX:MaxNewSize=5m -XX:SurvivorRatio=8 -XX:PretenureSizeThreshold=10m -XX:+UseConcMarkSweepGC -Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps
  */
 public class OldGCTest {
 
